--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.23.25",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "resend": "^6.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
